# TicketToRideStats

./: .gitignore  Makefile  README.md  board.py  export.py  gamestate.py  london.py  missions.py  optimal_strategy.py  ttr.py
maps/: __init__.py  europe.py  london.py  trentino.py
processingqueue/: Cargo.toml
processingqueue/src/: lib.rs  management_interrupt.rs  pub_traits.rs  scheduler.rs  work_processing_result.rs
py/: gamestate.py  optimal_strategy.py
py/maps/: london.py  trentino.py
ttrcalc/: Cargo.toml
ttrcalc/src/: board.rs  debug_processor.rs  game.rs  gamestate.rs  main.rs  mostpoint_processor.rs  parser.rs  route.rs  task_system.rs
ttrcalc/src/checkpointing/: array_writing.rs  checkpointer.rs  mod.rs
ttrcalc/ttrmodels/: Cargo.toml
ttrcalc/ttrmodels/src/: board.rs  gamestate.rs  lib.rs  parser.rs  route.rs
