[package]
name = "ttrcalc"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
crossbeam-utils = "0.8"
byteorder = "1"
mimalloc = { version = "0.1.17", default-features = false }
ttrmodels = {path= "ttrmodels"}

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
